    - We now check for the case when common DNS requests are going to
      wildcarded addresses, and change our exit policy to reject *:* if
      it's happening.  (Bug #364)
    - When we change nameservers or IP addresses, reset and re-launch
      our tests for DNS hijacking.
    - Block an obscure DoS attack from directory caches.

  o Security bugfixes:
    - Stop sending the HttpProxyAuthenticator string to directory
      servers when directory connections are tunnelled through Tor.
    - Clients no longer store bandwidth history in the state file.
    - Do not log introduction points for hidden services if SafeLogging
      is set.
    - When generating bandwidth history, round down to the nearest
      1k. When storing accounting data, round up to the nearest 1k.
    - When we're running as a server, remember when we last rotated onion
      keys, so that we will rotate keys once they're a week old even if
      we never stay up for a week ourselves.

  o Major bugfixes:
    - Fix a longstanding bug in eventdns that prevented the count of
      timed-out resolves from ever being reset. This bug caused us to
      give up on a nameserver the third time it timed out, and try it
      10 seconds later... and to give up on it every time it timed out
      after that. (May fix bug 326.)
    - Take out the '5 second' timeout from the connection retry
      schedule. Now the first connect attempt will wait a full 10
      seconds before switching to a new circuit. Perhaps this will help
      a lot. Based on observations from Mike Perry.
    - Fix a bug on the Windows implementation of tor_mmap_file() that
      would prevent the cached-routers file from ever loading (reported
      by John Kimble).

  o Minor bugfixes:
    - Fix a bug when a BSD-style PF socket is first used. (Patch from
      Fabian Keil.)
    - Fix an assert failure when a directory authority sets
      AuthDirRejectUnlisted and then receives a descriptor from an